maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: ':' expected but ',' found.
def Coord(x,y):Array[Int,Int] = {
           ^JediEscaper:30: error: identifier expected but '}' found.
}
^